parslers-benchmark/src/tests/invalid/syntaxErr/function/functionMissingCall.wacc
# program missing call token at function use

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int f() is
    return 0 
  end
  int x = f()
end

